src/main/java/com/example/sidepot/global/error/GlobalExceptionHandler.java
package com.example.sidepot.global.error;


import com.example.sidepot.global.dto.ErrorResponseDto;
import org.springframework.http.ResponseEntity;
import org.springframework.web.bind.annotation.ExceptionHandler;
import org.springframework.web.bind.annotation.RestControllerAdvice;
import org.springframework.web.servlet.mvc.method.annotation.ResponseEntityExceptionHandler;

@RestControllerAdvice
public class GlobalExceptionHandler extends ResponseEntityExceptionHandler {

    @ExceptionHandler(value = { Exception.class })
    protected ResponseEntity<ErrorResponseDto> handleCustomException(Exception e) {
        return ErrorResponseDto.from(e.getErrorCode());
    }
}
